remove hacks for cross compile issue

--- a/java/com/google/vr180/capture/motion/jni/BUILD
+++ b/java/com/google/vr180/capture/motion/jni/BUILD
@@ -23,7 +23,7 @@ cc_library(
         "sensor_fusion.cc",
     ],
     deps = [
-        "//cpp/jni:jni",
+        "//cpp/jni",
         "//cpp/sensor_fusion:online_sensor_fusion",
         "@com_google_absl//absl/memory",
         "@eigen//:eigen",
