--- a/java/com/google/vr180/app/AndroidManifest.xml
+++ b/java/com/google/vr180/app/AndroidManifest.xml
@@ -24,8 +24,8 @@
     For actual cameras, you may target a higher API level when the camera app runs as a system app.
   -->
   <uses-sdk
-      android:minSdkVersion="21"
-      android:targetSdkVersion="23"/>
+      android:minSdkVersion="23"
+      android:targetSdkVersion="33"/>
 
   <uses-permission android:name="android.permission.REBOOT"/>
   <uses-permission android:name="android.permission.CAMERA"/>
@@ -47,6 +47,9 @@
   <uses-permission android:name="android.permission.SET_TIME_ZONE"/>
   <uses-permission android:name="android.permission.CONNECTIVITY_INTERNAL"/>
   <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+  <uses-permission android:name="android.permission.BLUETOOTH_CONNECT"/>
+  <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE"/>
+
 
   <uses-feature android:glEsVersion="0x00020000" android:required="true"/>
   <uses-feature android:name="android.hardware.camera2.full" />
@@ -62,6 +65,7 @@
     <!-- Main UI activity -->
     <activity
         android:name="com.google.vr180.app.MainActivity"
+        android:exported="true"
         android:theme="@style/app_theme_main"
         android:configChanges="orientation|keyboardHidden|screenSize"
         android:screenOrientation="landscape"
