--- a/.bazelrc
+++ b/.bazelrc
@@ -1,11 +1,18 @@
 # Android configs. Bazel needs to have --cpu and --fat_apk_cpu both set to the
 # target CPU to build transient dependencies correctly. See
 # https://docs.bazel.build/versions/master/user-manual.html#flag--fat_apk_cpu
+# TODO: Remove once https://github.com/bazelbuild/rules_android/issues/219 is resolved.
+common --experimental_google_legacy_api
+common --experimental_enable_android_migration_apis
+
 build:android --crosstool_top=@androidndk//:default_crosstool
 build:android --host_crosstool_top=@bazel_tools//tools/cpp:toolchain
+build:android --noincompatible_enable_android_toolchain_resolution
+
 build:android_arm --config=android
 build:android_arm --cpu=armeabi-v7a
 build:android_arm --fat_apk_cpu=armeabi-v7a
+
 build:android_arm64 --config=android
 build:android_arm64 --cpu=arm64-v8a
 build:android_arm64 --fat_apk_cpu=arm64-v8a
